--- a/addressbook/pom.xml
+++ b/addressbook/pom.xml
@@ -25,13 +25,13 @@
         <artifactId>ez-vcard</artifactId>
         <version>0.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-    <!-- <repositories>  
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories> -->
     <build>
         <plugins>
             <plugin>
