--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
     "image": "mcr.microsoft.com/devcontainers/java:dev-21",
     "features": {
         "ghcr.io/devcontainers/features/java:1": {
-            "installMaven": true
+            "installMaven": false
         }
     },
     "customizations": {
@@ -15,5 +15,5 @@
             ]
         }
     },
-    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y doxygen"
+    "postCreateCommand": "curl -fsSL https://archive.apache.org/dist/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz | tar -xz -C /usr/local && ln -s /usr/local/apache-maven-3.9.6/bin/mvn /usr/local/bin/mvn && sudo apt-get update && sudo apt-get install -y doxygen"
 }
